<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_mapFragment">

    <fragment
        android:id="@+id/nav_mapFragment"
        android:name="com.example.mapstest.ui.MapFragment"
        android:label="@string/MapFragment_toolbar_title"
        tools:layout="@layout/fragment_map">
        <argument
            android:name="lat"
            android:defaultValue="0"
            app:argType="float" />
        <argument
            android:name="lng"
            android:defaultValue="0"
            app:argType="float" />
        <argument
            android:name="isArgumentPassed"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/nav_allMarkersFragment"
        android:name="com.example.mapstest.ui.AllMarkersFragment"
        android:label="@string/AllMarkersFragment_toolbar_title"
        tools:layout="@layout/fragment_all_markers">
        <action
            android:id="@+id/action_nav_allMarkersFragment_to_nav_mapFragment"
            app:destination="@id/nav_mapFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_aboutFragment"
        android:name="com.example.mapstest.ui.AboutFragment"
        android:label="@string/AboutFragment_toolbar_title"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_nav_aboutFragment_to_nav_mapFragment"
            app:destination="@id/nav_mapFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_mapFragment" />
    </fragment>
</navigation>