<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MapFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/restart_app_cV"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="15dp"
        android:visibility="gone"
        app:cardCornerRadius="7dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/marker_iV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/cont_description_map_marker_icon"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_map_marker_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingVertical="8dp"
                android:textAlignment="center"
                android:text="@string/permission_not_granted_cV"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_app_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/restart_the_app_button" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>